C/include/codata_constants_2010.h

ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ENERGY_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_FORCE_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_LENGTH_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_MAG_DIPOLE_MOM_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_MAG_FLUX_DENSITY_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_MAGNETIZABILITY_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_MASS_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_MOMUM_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_PERMITTIVITY_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_TIME_2010;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_VELOCITY_2010;
ADD_IMPORT extern const struct codata_constant_type AVOGADRO_CONSTANT_2010;
ADD_IMPORT extern const struct codata_constant_type BOHR_MAGNETON_2010;
ADD_IMPORT extern const struct codata_constant_type BOHR_MAGNETON_IN_EV_T_2010;
ADD_IMPORT extern const struct codata_constant_type BOHR_MAGNETON_IN_HZ_T_2010;